# wsengine

./: CMakeLists.txt  CMakeOptions.txt
wsengine/: CMakeLists.txt  dump_encaps.c  dump_filetypes.c  dump_utils.c  dump_utils.h  dump_version.c  read_cmd.c  read_cmd.h  read_file.c  write_file.c  wsengine.c  wsengine.h
